--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,16 @@ dependencies = [
     "pygbag>=0.9.2",
     "tomli>=2.0.1",
 ]
+
+[tool.pygbag]
+exclude = [
+    "tools",
+    "plan",
+    "build",
+    "docs",
+    ".git",
+    ".venv",
+    "__pycache__",
+    "*.pyc",
+    "build.py",
+]
