feat: Add visible order screen for previewing orders before acceptance
- Introduced PhoneVisibleOrderScreen to display details of VISIBLE orders.
- Integrated visible order handling in PhoneScreen, allowing users to preview and accept orders.
- Updated input handling to manage transitions between visible and active order screens.
- Enhanced UI with navigation buttons for previous, next, and acceptance of orders.
- Modified order manager to support active order limits and random delays for incoming orders.
- Implemented order text roller to generate descriptive text for plant orders from YAML sentences.
- Updated shared components to include generated text fields for plant and order descriptions.
- Adjusted input manager for better handling of screen coordinates in browser environments.
- Localized start dialog text for improved user experience.

--- a/data/map1_config.json
+++ b/data/map1_config.json
@@ -1,11 +1,12 @@
-{
+-{
     "name": "Map 1 - City Center",
     "total_orders": 20,
-    "orders_required": 10,
+    "orders_required": 4,
     "plants_required": 0,
     "batch_size": 3,
     "batch_delay": 10.0,
     "accept_time": 15.0,
+    "active_order_limit": 6,
     "greenery": {
         "enabled": true,
         "green_color": [60, 140, 60],
