--- a/data/map1_config.json
+++ b/data/map1_config.json
@@ -1,15 +1,26 @@
--{
-    "name": "Map 1 - City Center",
-    "total_orders": 20,
-    "orders_required": 4,
-    "plants_required": 0,
-    "batch_size": 3,
-    "batch_delay": 10.0,
-    "accept_time": 25.0,
-    "active_order_limit": 6,
-    "greenery": {
-        "enabled": true,
-        "green_color": [60, 140, 60],
-        "white_threshold": 200
-    }
+{
+  "name": "Map 1 - City Center",
+  "total_orders": 20,
+  "orders_required": 4,
+  "plants_required": 0,
+  "score_required": 200,
+  "points_per_plant": 10,
+  "full_order_bonus": 20,
+  "batch_size": 3,
+  "batch_delay": 10.0,
+  "accept_time": 25.0,
+  "active_order_limit": 6,
+  "greenery": {
+    "enabled": true,
+    "green_color": [10, 240, 30],
+    "white_threshold": 200
+  },
+  "greenhouse": {
+    "pick_radius": 100,
+    "plant_initial_amount": 1,
+    "plant_grow_amount": 3,
+    "plant_grow_time_min": 30.0,
+    "plant_grow_time_max": 60.0,
+    "plant_inventory_max": 7
+  }
 }
