--- a/data/map1_config.json
+++ b/data/map1_config.json
@@ -6,6 +6,30 @@
   "score_required": 200,
   "points_per_plant": 10,
   "full_order_bonus": 20,
+  "difficulty_easy": {
+    "orders_required": 2,
+    "order_min_plant_types": 1,
+    "order_max_plant_types": 2,
+    "order_min_plant_amount": 1,
+    "order_max_plant_amount": 2,
+    "score_required": 60
+  },
+  "difficulty_medium": {
+    "orders_required": 4,
+    "order_min_plant_types": 2,
+    "order_max_plant_types": 3,
+    "order_min_plant_amount": 2,
+    "order_max_plant_amount": 4,
+    "score_required": 120
+  },
+  "difficulty_hard": {
+    "orders_required": 6,
+    "order_min_plant_types": 3,
+    "order_max_plant_types": 4,
+    "order_min_plant_amount": 3,
+    "order_max_plant_amount": 5,
+    "score_required": 200
+  },
   "batch_size": 3,
   "batch_delay": 10.0,
   "accept_time": 25.0,
